fix: updated code for dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,19 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+} */
+
+/* @media (prefers-color-scheme: dark) { */
+:root {
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 0, 0, 0;
+  --background-end-rgb: 0, 0, 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+/* } */
 
 @layer utilities {
   .text-balance {
@@ -23,9 +24,9 @@
 }
 
 @layer base {
-  body {
+  /* body {
     @apply bg-background-light text-text-light;
-  }
+  } */
 
   @media (prefers-color-scheme: dark) {
     body {
